feat(api): query latest stock daily indicators
